<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable = "true"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/sortByNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/sortByNameIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:contentDescription="@string/recipe_image_content_description"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:srcCompat="@drawable/ic_room_service" />

        <TextView
            android:id="@+id/sortByNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/action_sort_by_name_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sortByDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/sortByDateIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:paddingTop="15dp"
            android:contentDescription="@string/recipe_image_content_description"
            android:paddingBottom="15dp"
            app:srcCompat="@drawable/ic_today" />

        <TextView
            android:id="@+id/sortByDateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/action_sort_by_date_title" />

    </LinearLayout>

</LinearLayout>