<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/no_internet_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible">

    <TextView
        android:id="@+id/noInternetTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/event_no_internet_title"
        android:textAlignment="center"
        android:textColor="#363636"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/noInternetDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />

    <TextView
        android:id="@+id/noInternetDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/event_no_internet_description"
        android:textAlignment="center"
        android:textColor="#363636"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/noInternetBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/noInternetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="224dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/event_no_internet_button_title"
        android:textColor="#4A90E2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#4A90E2" />

</androidx.constraintlayout.widget.ConstraintLayout>